# aiogram_template

./: .env.dist  .flake8  .gitignore  Dockerfile  Makefile  README.md  aerich.ini  cookiecutter.json  docker-compose.yml  pyproject.toml  requiremets.txt
app/: __init__.py  __main__.py  cli.py  config.py  main.py  misc.py  setting.py
app/bot/: base.py
app/bot/handlers/: __init__.py  echo.py
app/bot/middlewares/: __init__.py
app/handlers/: __init__.py  start.py
app/keyboards/inline/: Constructor.py  __init__.py
app/keyboards/reply/: Constructor.py  __init__.py
app/middlewares/: __init__.py  acl.py  database.py
app/misc/: __init__.py  config_parser.py  trafaret.py
app/models/: __init__.py  base.py  chat.py  user.py
app/service/: repository.py
app/utils/: MarkupConstructorCore.py  __init__.py  config.py  default_commands.py  exceptions.py  flatten.py  logger.py  notify_admins.py  trafaret.py
app/web/: base.py
bot/: cli.py  main.py  settings.py
bot/handlers/: __init__.py
bot/handlers/private/: start.py
bot/middlewares/: __init__.py  data.py  database.py
bot/models/: __init__.py  base.py  chat.py  user.py
bot/utils/: __init__.py  broadcast.py  certificates.py  config.py  config_parser.py  exceptions.py  helper.py  logger.py  modules.py  parse_config.py  startup_notify.py  trafaret.py
bot/utils/broadcast/: __init__.py  base.py  copy_broadcast.py  photo_broadcast.py  text_broadcast.py  types.py
bot/utils/markup_constructor/: __init__.py  base.py  inline.py  reply.py
config/: config.yml.tmp  dev_config.yml
migrations/: env.py
migrations/bot/: 0_20201203213106_init.sql  1_20201203213447_update.sql
scripts/: docker-entrypoint.sh
{{cookiecutter.project_name}}/: .env  LICENSE  Makefile  pyproject.toml
{{cookiecutter.project_name}}/app/: __main__.py  config.py  misc.py
{{cookiecutter.project_name}}/app/utils/: logger.py  notify_admins.py
