[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["F0rzend <kostyajog@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.12"
aiohttp = "^3.7.4"
loguru = "^0.5.3"
PyYAML = "^5.4.1"
trafaret = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
