[tool.poetry]
name = "aiogram_template"
version = "0.0.6"
description = "A template written in aiogram"
authors = ["fonco <foncoofficial@gmail.com>"]
repository = "https://github.com/fonco/aiogram_template"
maintainers = [
    "F0rzend github.com/f0rzend",
    "comictomcat github.com/comictomcat",
]


[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^2.12"
PyYAML = "^5.4.1"
loguru = "^0.5.3"
aiogram-broadcaster = "^0"
trafaret = "^2.1.0"
SQLAlchemy = "^1.4.9"
alembic = "^1.5.8"
asyncpg = "^0.22.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.9.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 99


[tool.black]
line-length = 99
exclude = '''
(
    \.venv
)
'''


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
