[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["0Kit <kostyajog@mail.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "2.11"
aioredis = "1.3.1"
alembic = "1.4.3"
environs = "9.0.0"
gino = "1.0.1"
loguru = "0.5.3"
sqlalchemy = "1.3.20"
psycopg2-binary = "^2.8.6"
appdirs = "1.4.4"

[tool.poetry.dev-dependencies]
{%- if cookiecutter.use_isort == "y" %}
isort = "5.6.4"
{%- endif %}
{%- if cookiecutter.use_flake8 == "y" %}
flake8 = "3.8.4"
{%- endif %}
{%- if cookiecutter.use_black == "y" %}
black = "20.8b1"
{%- endif %}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

{%- if cookiecutter.use_isort == "y" %}
[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [
    'app/__main__.py',
]
{%- endif %}

{% if cookiecutter.use_black == "y" -%}
[tool.black]
skip-string-normalization = true
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | dist
  | .env
)/
| /pgdata
'''
{%- endif %}
